[package]
name = "obnth"
version = "0.1.0"
edition = "2018"

description = "Allows securely opening files in untrusted directories on *nix systems."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["filesystem"]
keywords = ["chroot", "open", "secure"]
repository = "https://github.com/cptpcrd/obnth"

[features]
default = ["openat2"]

# Enable using openat2() on Linux (ignored on other platforms)
openat2 = []

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
bitflags = "1.2"

[dev-dependencies]
tempfile = "3.1"
