[package]
name = "obnth"
version = "0.1.1"
edition = "2018"

description = "Allows securely opening files in untrusted directories on *nix systems."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["filesystem"]
keywords = ["chroot", "open", "secure"]
repository = "https://github.com/cptpcrd/obnth"

[features]
default = ["openat2", "o_resolve_beneath"]

# Enable using openat(..., O_RESOLVE_BENEATH) on FreeBSD (ignored on other platforms)
o_resolve_beneath = []

# Enable using openat2() on Linux (ignored on other platforms)
openat2 = []

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
cfg-if = "1.0"
bitflags = "1.2"

[target.'cfg(target_os = "linux")'.dependencies]
openat2-rs = { package = "openat2", version = "0.1.2" }

[dev-dependencies]
tempfile = "3.1"
